syntax = "proto3";

package pb;

option go_package = "github.com/scm-dev1dev5/mtm-community-forum/badges_rpc/pb";

import "google/protobuf/timestamp.proto";

service BadgeService {
  rpc CreateBadge(CreateBadgeRequest) returns (BadgeResponse) {}
  rpc GetBadge(BadgeRequest) returns (BadgeResponse) {}
  rpc GetBadges(GetBadgesRequest) returns (BadgeResponseList) {}
  rpc UpdateBadge(UpdateBadgeRequest) returns (BadgeResponse) {}
  rpc DeleteBadge(BadgeRequest) returns (DeleteBadgeResponse) {}
}

enum BadgeType {
  none = 0;
  qa = 1;
  reaction = 2;
}

message Badge {
  string _id = 1;
  string name = 2;
  string description = 3;
  BadgeType type = 4;
  int32 level = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateBadgeRequest {
  string name = 1;
  string description = 2;
  BadgeType type = 3;
  int32 level = 4;
}

message BadgeRequest { string id = 1; }

message UpdateBadgeRequest {
  string _id = 1;
  optional string name = 2;
  optional string description = 3;
  optional BadgeType type = 4;
  optional int32 level = 5;
}

message GetBadgesRequest {
  optional int64 page = 1;
  optional int64 limit = 2;
}

message BadgeResponse { Badge badge = 1; }

message BadgeResponseList {
  repeated Badge badges = 1;
}

message DeleteBadgeResponse { bool success = 1; }